Refactor Person to store Optional<Email>